[package]
name = "metaemu-peripheral"
version = "0.1.0"
authors = ["Zitai Chen <zitaichen@outlook.com>" ]
edition = "2021"

[dependencies]
bitvec = "0.22"
thiserror = "1"
parking_lot = "0.11"
socketcan = "1.7"
byteorder = "1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
serde = { version = "1.0", features = ["derive"] }

intervals = { version = "0.1", registry = "fugue" }

fugue = { version = "*", registry = "fugue" }
metaemu = { version = "0.3", features = ["concrete"] }
fugue-concolic-solver-boolector = { git = "ssh://git@github.com/fugue-re/fugue-concolic-solver-boolector.git", version = '*'}
fugue-concolic = { git = "ssh://git@github.com/fugue-re/fugue-concolic.git", branch="dev", version = "*" }

